[tool.poetry]
name = "nightshadedetect"
version = "0.1.0"
description = "A fork of NightshadeAntidote"
authors = ["tim-hub <tim-hub@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
pillow = "^10.1.0"
pyexiftool = "^0.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
